# aoc-2019

./: LICENSE  README.md  template.sh
cmake/: UT.cmake  common.cmake  day.cmake  preamble.cmake
common/: AocDay.hpp  CMakeLists.txt  Tokenizer.hpp  aoc_except.hpp  aoc_main.hpp  main_ut.cpp  tokenizer_ut.cpp  ut_helpers.hpp
template/: CMakeLists.txt.templ  day.cpp.templ  day_ut.cpp.templ  impl.cpp.templ  impl.hpp.templ
